--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,7 @@
-  <h1>New Review</h1>
+  <h1>New Coffee Review</h1>
 
-  <%= form_with scope: :review, local: true do |form| %>
+
+<%= form_with scope: :review, url: reviews_path, local: true do |form| %>
     <p>
       <%= form.label :name %><br>
       <%= form.text_field :name %>
