--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Listing Reviews</h1>
+
+<h1>Listing reviews</h1>
 
 <table>
   <tr>
@@ -6,11 +7,11 @@
     <th>Notes</th>
   </tr>
 
-  <%= @reviews.each do |review| %>
+  <% @reviews.each do |review| %>
     <tr>
-      <td><%= review.title %></td>
-    <td><%= review.text %></td>
-    <td><%= link_to 'Show', review_path(review) %></td>
-  </tr>
-<% end %>
+      <td><%= review.name %></td>
+      <td><%= review.notes %></td>
+      <td><%= link_to 'Show', review_path(review) %></td>
+    </tr>
+  <% end %>
 </table>
