--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -16,4 +16,6 @@
       <td><%= link_to 'Show', review_path(review) %></td>
     </tr>
   <% end %>
+
+<%= link_to 'New review', new_review_path %>
 </table>
