--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,6 +2,21 @@
 
 
 <%= form_with scope: :review, url: reviews_path, local: true do |form| %>
+
+<% if @review.errors.any? %>
+   <div id="error_explanation">
+     <h2>
+       <%= pluralize(@review.errors.count, "error") %> prohibited
+       this review from being saved:
+     </h2>
+     <ul>
+       <% @review.errors.full_messages.each do |msg| %>
+         <li><%= msg %></li>
+       <% end %>
+     </ul>
+   </div>
+ <% end %>
+
     <p>
       <%= form.label :name %><br>
       <%= form.text_field :name %>
