created a link to the edit action in the list of all reviews

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -7,6 +7,7 @@
   <tr>
     <th>Name</th>
     <th>Notes</th>
+    <th> colspan="2"></th>
   </tr>
 
   <% @reviews.each do |review| %>
@@ -14,6 +15,7 @@
       <td><%= review.name %></td>
       <td><%= review.notes %></td>
       <td><%= link_to 'Show', review_path(review) %></td>
+      <td><%= link_to 'Edit', edit_review_path(review) %></td>
     </tr>
   <% end %>
 
