updated new and edit review views to use the form view partial

--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,6 +1,13 @@
 
 <h1>Edit review</h1>
 
+<%= render 'form' %>
+
+<%= link_to 'Back', reviews_path %>
+
+<!--
+<h1>Edit review</h1>
+
 <%= form_with(model: @review) do |form| %>
 
   <% if @review.errors.any? %>
@@ -26,11 +33,11 @@
     <%= form.label :notes %><br>
     <%= form.text_area :notes %>
   </p>
- 
+
   <p>
     <%= form.submit %>
   </p>
 
 <% end %>
 
-<%= link_to 'Back', reviews_path %>
+<%= link_to 'Back', reviews_path %> -->
