--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,11 @@
-  <h1>New Coffee Review</h1>
+
+<h1>New Coffe Review</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Back', reviews_path %>
+
+<!-- <h1>New Coffee Review</h1>
 
 
 <%= form_with scope: :review, url: reviews_path, local: true do |form| %>
@@ -32,4 +39,4 @@
     </p>
   <% end %>
 
-  <%= link_to 'Back', reviews_path %>
+  <%= link_to 'Back', reviews_path %> -->
