--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -15,10 +15,10 @@
       <td><%= review.notes %></td>
       <td><%= link_to 'Show', review_path(review) %></td>
       <td><%= link_to 'Edit', edit_review_path(review) %></td>
-      <td><%= link_to 'Destroy', review_path(review),
+      <td><%= link_to 'Delete', review_path(review),
               method: :delete,
               data: { confirm: 'Are you sure?' } %></td>
     </tr>
-  <% end %>
+  <% end %>v
 
 </table>
