--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -9,5 +9,20 @@
   <%= @review.notes %>
 </p>
 
+<h2>Add a comment:</h2>
+<%= form_with(model: [ @review, @review.comments.build ], local: true) do |form| %>
+  <p>
+    <%= form.label :commenter %><br>
+    <%= form.text_field :commenter %>
+  </p>
+  <p>
+    <%= form.label :body %><br>
+    <%= form.text_area :body %>
+  </p>
+  <p>
+    <%= form.submit %>
+  </p>
+<% end %>
+
 <%= link_to 'Edit', edit_review_path(@review) %> |
 <%= link_to 'Back', reviews_path %>
