added a comment partial

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -19,6 +19,6 @@
               method: :delete,
               data: { confirm: 'Are you sure?' } %></td>
     </tr>
-  <% end %>v
+  <% end %>
 
 </table>
