--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -10,17 +10,7 @@
 </p>
 
 <h2>Comments</h2>
-<% @review.comments.each do |comment| %>
-  <p>
-    <strong>Commenter:</strong>
-    <%= comment.commenter %>
-  </p>
-
-  <p>
-    <strong>Comment:</strong>
-    <%= comment.body %>
-  </p>
-<% end %>
+<%= render @review.comments %>
 
 <h2>Add a comment:</h2>
 <%= form_with(model: [ @review, @review.comments.build ], local: true) do |form| %>
